// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-0" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            minChunks: 2,

            cacheGroups: {
                common: {
                    name: 'common',
                    chunks: 'initial',
                    enforce: true
                },

                vendor: {
                    name: 'vendor',
                    chunks: 'initial',
                    enforce: true,
                    test: '/node_modules/'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-1" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                common: {
                    name: 'common',
                    chunks: 'initial',
                    enforce: true
                },

                vendor: {
                    name: 'vendor',
                    chunks: 'initial',
                    enforce: true,
                    test: '/node_modules/'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-2" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                vendor: {
                    name: 'vendor',
                    chunks: 'initial',
                    enforce: true,
                    test: '/node_modules/'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-3" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                commons: {
                    name: 'commons',
                    chunks: 'initial',
                    enforce: true
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-4" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            chunks: 'async',
            minSize: 0,
            minChunks: 2,

            cacheGroups: {
                main: {
                    name: 'main'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-5" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                main: {
                    name: 'main',
                    chunks: 'initial',
                    enforce: true
                }
            }
        },

        runtimeChunk: true
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-6" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                main: {
                    name: 'main',
                    chunks: 'initial',
                    enforce: true
                },

                name: {
                    name: 'name',
                    chunks: 'initial',
                    enforce: true,
                    test: ({ resource }) => /node_modules/.test(resource),

                    test: ({ resource }) => {
                        var foo = \\"bar\\";
                        return /node_modules/.test(resource);
                    },

                    test: function ({ resource }) {
                        var foo = \\"bar\\";
                        return /node_modules/.test(resource);
                    },

                    test: function ({ resource }) {
                        var foo = \\"bar\\";
                        if (foo) {
                            return /node_modulesfoo/.test(resource);
                        } else if (foo === \\"something\\") {
                            return /node_modulesbar/.test(resource);
                        } else {
                            return /node_modulesbaz/.test(resource);
                        }
                    }
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-7" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            minChunks: Infinity,

            cacheGroups: {
                main: {
                    name: 'main',
                    chunks: 'initial',
                    enforce: true
                },

                vendor: {
                    name: 'vendor',
                    chunks: 'initial',
                    enforce: true,
                    test: '/node_modules/'
                }
            }
        }
    }
}
"
`;
